# bundlecrypt

./: .dockerignore  .gitignore  Makefile  NOTICE  README.md  Vagrantfile  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt  setup.py
bundlecrypt/: cli.py  config-schema.json  config.py  core.py  exceptions.py  jose.py  keystore.py  utils.py
demos/demo-inotify/: Dockerfile  docker-compose.yml  loop.sh  run-demo.sh
demos/demo-rabbitmq/: Dockerfile  docker-compose.yml  rabbitmq-handler.py  run-demo.sh
dmcrypt-rdk/: CMakeLists.txt  README.md  dmcrypt-rdk.c  postinst.in
docker/: Dockerfile  Makefile  entrypoint.sh
scripts/: fix-loop-devices.sh
test/interoperability/: Dockerfile  Makefile  test-interoperability.sh
test/unit/: __init__.py  conftest.py  test_cli.py  test_config.py  test_core.py  test_jose.py  test_keystore.py  test_utils.py
test/unit/fixtures/: bundle-protected.tgz  bundle-unprotected.tgz  bundlecrypt-config.json
test/unit/fixtures/jose/: jwe-token.txt  jwe-token.txt.README
test/unit/fixtures/keys/test/: bundlecrypt-test-cert.pem  bundlecrypt-test-key.pem  bundlecrypt-test-pubkey.pem
